welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: ':' expected but ')' found.
def peindreColonne(T){
                    ^Array1:25: error: identifier expected but '}' found.
}
^